@@ -12,6 +12,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 CPPFLAGS="@CPPFLAGS@"
 LDFLAGS="@LDFLAGS@"
+LIBS="@LIBS@"
 X11_SUPPORT=@LIBAST_X11_SUPPORT@
 IMLIB2_SUPPORT=@LIBAST_IMLIB2_SUPPORT@
 MMX_SUPPORT=@LIBAST_MMX_SUPPORT@
@@ -20,7 +21,7 @@ VERSION=@VERSION@
 
 case $1 in
   -h | --help | -help)
-    echo "Usage:  libast-config [--version] [--prefix] [--exec-prefix] [--cppflags] [--ldflags] [--support]"
+    echo "Usage:  libast-config [--version] [--prefix] [--exec-prefix] [--cppflags] [--ldflags] [--libs] [--support]"
     ;;
   -v | --version | -version)
     echo "Libary of Assorted Spiffy Things:  libast $VERSION"
@@ -34,8 +35,11 @@ case $1 in
   -c | --cppflags | -cppflags | --cflags | -cflags)
     echo "$CPPFLAGS"
     ;;
-  -l | --ldflags | -ldflags | --libs | -libs)
+  -l | --ldflags | -ldflags)
     echo "$LDFLAGS"
+    ;;
+  -L | --libs | -libs)
+    echo "$LIBS"
     ;;
   -s | --support | -support)
     echo "$MMX_SUPPORT $X11_SUPPORT $IMLIB2_SUPPORT"
